--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
                             <td class="disabled-cell">--</td>
                             <td><input type="number" id="toc_avg" class="avg-input" placeholder="--" readonly></td>
                         </tr>
+
+                        <!-- 8. Business Intelligence -->
+                        <tr>
+                            <td>Business Intelligence</td>
+                            <td>1</td>
+                            <td><input type="number" id="bi_exam" min="0" max="20" step="0.01" class="grade-input"></td>
+                            <td class="disabled-cell">--</td>
+                            <td class="disabled-cell">--</td>
+                            <td><input type="number" id="bi_avg" class="avg-input" placeholder="--" readonly></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -125,10 +135,10 @@
                     <li><span class="detail-label">Crypto, Op. Research, Compilation:</span> <br><code>(Exam × 0.5) + [((TD + TP) / 2) × 0.5]</code></li>
                     <li><span class="detail-label">Software Eng, Theory (with TD):</span> <br><code>(Exam × 0.6) + (TD × 0.4)</code></li>
                     <li><span class="detail-label">Python, Web Dev:</span> <br><code>(Exam × 0.6) + (TP × 0.4)</code></li>
-                    <li><span class="detail-label">Theory (Exam Only):</span> <br><code>Exam × 1.0</code></li>
+                    <li><span class="detail-label">Theory (Exam Only), Business Intelligence:</span> <br><code>Exam × 1.0</code></li>
                 </ul>
                 <p><strong>2. Final GPA:</strong></p>
-                <p>The sum of <code>(Module Average × Coefficient)</code> divided by the Total Coefficients (19).</p>
+                <p>The sum of <code>(Module Average × Coefficient)</code> divided by the Total Coefficients (20).</p>
             </div>
         </div>
 
